
(1) Recompiled mex-files for windows with static linked libraries. This will
    solve the issues on some systems where the runtime libraries for 
    Microsoft Visual C++ are not redistributed with matlab.    
(2) Removed some typos in new realignment code. 
------------------------------------------------------------------------
r430 | gaser | 2011-09-29 16:54:15

M      cg_vbm8_longitudinal_multi_run.m
M      CHANGES.txt

Removed bug in cg_vbm8_longitudinal_multi_run.m that caused incorrect 
processing of files if number of time points differs between subjects. 
Thanks to Sonja Faust for finding this weird error.
------------------------------------------------------------------------
r431 | gaser | 2011-09-30 16:17:14

M       cg_vbm8_defaults.m
M       spm_vbm8.m
M       cg_run_realign_estwrite.m
A       cg_set_com.m
M       cg_realign.m
M       cg_run_realign_estimate.m
M       cg_cfg_realign.m

(1) Added function to automatically set origin ucenter-of-mass.
(2) Removed option for ignoring mat-information for realignmnt from GUI.
------------------------------------------------------------------------
r432 | gaser | 2011-10-03 23:48:42

M      cg_vbm8_defs.m

Corrected erroneous inversion of modulated images while using function 
"Apply deformations" with modulation. Thanks to Fumio Yamashita for
finding this error.
------------------------------------------------------------------------
r433 | gaser | 2011-10-07 09:41:46

M       VBM8-Manual_Japanese.doc
M       VBM8-Manual.pdf
M       VBM8-Manual.doc
M       VBM8-Manual_Japanese.pdf

Corrected longitudinal design with one group in VBM8-Manual. The first main
effect "2" was missing.
------------------------------------------------------------------------
r434 | gaser | 2011-10-10 22:46:10

M       cg_vbm8_write.m

Use old skull-stripping approach if graph-cut skull-stripping fails.
------------------------------------------------------------------------
r435 | gaser | 2011-12-06 12:37:54